# prog02

./: .gitignore  README.md
Ube07/: Article.cpp  Article.h  CMakeLists.txt  Clothing.cpp  Clothing.h  ElectronicDevice.h  Storage.cpp  Storage.h  StorageDialogue.cpp  main.cpp
Ueb007/: Article.cpp  Article.h  CMakeLists.txt  Clothing.cpp  Clothing.h  ElectronicDevice.cpp  ElectronicDevice.h  ExceptionChecker.h  MockInput.cpp  MockInput.h  Storage.cpp  Storage.h  StorageDialogue.cpp  StorageDialogue.h  StorageExceptions.h  Testplan.xlsx  main.cpp  makefile  safeRead.h
Ueb01/: Birthdate.cpp_combined.txt  Birthdate.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  MockInput.cpp  MockInput.h  OutputHandler.cpp  OutputHandler.h  Person.cpp  Person.h  PersonStorage.cpp  PersonStorage.h  ausgabe.cpp  ausgabe.h  eingabe.cpp  eingabe.h  main.cpp  make-regeln  makefile
Ueb02/: Article.cpp  Article.h  ArticleTest.cpp  ArticleTest.h  CMakeLists.txt  Example.cpp  Example.h  main.cpp  make-regeln  makefile
Ueb03/: Article.cpp  Article.h  CMakeLists.txt  Storage.cpp  Storage.h  StorageDialogue.cpp  StorageDialogue.h  TestStorage.cpp  TestStorage.h  main.cpp  makefile  safeRead.h
Ueb04/: LinList.h  LinListTst.cpp  ListElement.cpp  ListElement.h  makefile
Ueb05/: CMakeLists.txt  LinList.cpp  LinList.h  LinkDialogue.cpp  LinkDialogue.h  ListElement.cpp  ListElement.h  MockInput.cpp  main.cpp  makefile  safeRead.h
Ueb06/: CMakeLists.txt  FileAnalyzer.cpp  FileAnalyzer.h  FileDialogue.cpp  FileDialogue.h  LinList.cpp  OutputFormatter.cpp  OutputFormatter.h  main.cpp  makefile  (+2 more)
(+113 files in other folders)
